overlays/weblate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weblate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weblate
  template:
    metadata:
      labels:
        app: weblate
    spec:
      containers:
      - name: weblate
        image: weblate/weblate
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: weblate-data
          mountPath: /app/data
        - name: weblate-cache
          mountPath: /app/cache
      - name: libretranslate
        image: libretranslate/libretranslate:latest
        ports:
        - containerPort: 5000
              
      volumes:
      - name: weblate-data
        emptyDir: {}
      - name: weblate-cache
        emptyDir: {}
