overlays/weblate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblate
spec:
  selector:
    app: weblate
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: TCP
      port: 5000
      targetPort: 5000
