overlays/weblate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weblate
  namespace: 5stack
  annotations:
    cert-manager.io/issuer: "5stack-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: $(WEBLATE_HOST)
      http:
        paths:
          - backend:
              service:
                name: weblate
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - $(WEBLATE_HOST)
      secretName: weblate-ssl
